manifest/test.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-service
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-service
    spec:
      containers:
        - name: nginx-service
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
             requests:
              cpu: 500m
              memory: 1000Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
